tests/reject/classEscapingParamOverride.emojic
🐇 🐟 🍇
  🆕 🍇🍉

  ❗️ 🙋 a 🐟 🍇
    😀 🔤I’m a fish.🔤❗️
  🍉
🍉

🐇 🦍 🍇
  🖍🆕 pet 🐟

  🆕 🍼 pet 🐟 🍇
  🍉
🍉

🐇 🐡 🐟 🍇
  ✒️❗️ 🙋 a 🐟 🍇
    🆕🦍 a❗️
  🍉
🍉

🏁 🍇
🍉
